@startuml Task状态机
!theme plain
hide empty description

title Task状态机（简化版 - 2025-11-24更新）

[*] --> CREATED : 创建任务

CREATED --> PENDING : 准备执行\n[创建时校验通过]

PENDING --> RUNNING : 开始执行
PENDING --> CANCELLED : 取消

RUNNING --> PAUSED : 暂停请求\n[Stage边界协作式暂停]
RUNNING --> COMPLETED : 所有Stage完成\n[currentStageIndex >= totalStages]
RUNNING --> FAILED : Stage失败
RUNNING --> ROLLING_BACK : 手动回滚
RUNNING --> CANCELLED : 用户取消

PAUSED --> RUNNING : 恢复执行\n[原子操作，无中间状态]
PAUSED --> ROLLING_BACK : 回滚请求
PAUSED --> CANCELLED : 取消请求

FAILED --> RUNNING : 重试\n[retryCount < maxRetry]
FAILED --> ROLLING_BACK : 回滚请求

COMPLETED --> ROLLING_BACK : 回滚请求\n[业务需要]

ROLLING_BACK --> ROLLED_BACK : 回滚成功
ROLLING_BACK --> ROLLBACK_FAILED : 回滚失败

ROLLED_BACK --> RUNNING : 重试\n[回滚后可重新执行]
ROLLBACK_FAILED --> ROLLING_BACK : 重试回滚

ROLLED_BACK --> [*]
ROLLBACK_FAILED --> [*]
COMPLETED --> [*]
CANCELLED --> [*]

note right of CREATED
  **初始状态**
  - 任务创建时的初始状态
  - 包含租户和部署单元信息
  - **校验在创建时完成**
end note

note right of PENDING
  **待执行状态**
  - 创建时校验已通过
  - 等待调度执行
end note

note right of RUNNING
  **执行状态**
  - 顺序执行 Stage 列表
  - 仅在 Stage 边界响应暂停/取消
  - 每个 Stage 完成后保存 checkpoint
  - 记录 startedAt 时间戳
end note

note right of PAUSED
  **暂停状态**
  - 协作式暂停（Stage 边界）
  - checkpoint 已保存
  - 可恢复、回滚或取消
  - **恢复是原子操作，无中间状态**
end note

note right of FAILED
  **失败状态**
  - Stage 执行失败
  - 可重试（受 maxRetry 限制）
  - 可回滚
end note

note right of COMPLETED
  **完成状态**（终态）
  - 所有 Stage 成功执行
  - 记录 endedAt 和 durationMillis
  - 清理 checkpoint
  - 可回滚（业务需要时）
end note

note right of ROLLING_BACK
  **回滚中**
  - 按 Stage 列表逆序执行回滚
  - 恢复 prevConfigSnapshot
  - 发布 Stage 级回滚事件
  - **封装在 Task 内部，Plan 不感知**
end note

note right of ROLLED_BACK
  **回滚完成**（终态）
  - 快照恢复到聚合
  - 健康确认后更新 lastKnownGoodVersion
  - 记录 endedAt 和 durationMillis
  - 可重新执行
end note

note right of ROLLBACK_FAILED
  **回滚失败**（终态）
  - 回滚过程中出错
  - 可尝试重新回滚
  - 或手工介入修复
end note

note left of CANCELLED
  **已取消**（终态）
  - 用户主动取消
  - checkpoint 保留用于诊断
end note

note bottom
  **重要变更 (2025-11-24)**：
  - 移除 VALIDATING/VALIDATION_FAILED 状态（校验在创建时完成）
  - 移除 RESUMING 状态（恢复是原子操作）
  - 保留回滚相关状态（ROLLING_BACK/ROLLED_BACK/ROLLBACK_FAILED）

  **设计理念**：
  - 校验前置，创建即校验完成，避免状态膨胀
  - 恢复原子化，不需要可观测的中间状态
  - 回滚状态封装在 Task 内部，Plan 层面不感知
  - 符合协作式控制原则（AP-06）
end note

@enduml
  - 事件包含 cancelledBy 和 lastStage
  - 释放租户锁
  - 终态
end note

note left of ROLLBACK_FAILED
  **回滚失败**
  - 部分 Stage 回滚失败
  - 可重试回滚
  - 发布 partiallyRolledBackStages
end note

@enduml

